Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71762

QWebEngine Regression: Failing check in ContentSettingsObserverQt::DidCommitProvisionalLoad

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.12.1
    • 5.12.0 Beta 4
    • WebEngine
    • None
    • dbafb145afcb640e359ad2928dd7d05a332d570b (qt/qtwebengine-chromium/69-based)

      Scenario:

      • I have a report being shown in a QWebEngineView
      • In the toolbar I add forward and back buttons:
        mToolBar->addAction( page->action( QWebEnginePage::Back ) );
        mToolBar->addAction( page->action( QWebEnginePage::Forward ) );
        

      If I:

      • Click a link in my report to jump within the report
      • Use the "back" button

      On 5.11, it works as expected and I go back to my previous spot.

      On 5.12 (SHA: 7156b837104ed9457214c60d411bba2861247ff8) I get a blank page and this in the console:

      [95800:775:1113/063049.838501:FATAL:content_settings_observer_qt.cpp(110)] Check failed: frame->GetDocument().GetSecurityOrigin().ToString() == "null" || !url.SchemeIs(url::kDataScheme). 
      0   QtWebEngineCore_debug               0x0000000114805eee base::debug::StackTrace::StackTrace(unsigned long) + 174
      1   QtWebEngineCore_debug               0x0000000114805f4d base::debug::StackTrace::StackTrace(unsigned long) + 29
      2   QtWebEngineCore_debug               0x000000011447b14c base::debug::StackTrace::StackTrace() + 28
      3   QtWebEngineCore_debug               0x00000001144d595f logging::LogMessage::~LogMessage() + 479
      4   QtWebEngineCore_debug               0x00000001144c5675 logging::LogMessage::~LogMessage() + 21
      5   QtWebEngineCore_debug               0x000000010d2bab2c QtWebEngineCore::ContentSettingsObserverQt::DidCommitProvisionalLoad(bool, bool) + 508
      6   QtWebEngineCore_debug               0x000000011adad24a content::RenderFrameImpl::NotifyObserversOfNavigationCommit(bool, bool) + 442
      7   QtWebEngineCore_debug               0x000000011adad392 content::RenderFrameImpl::UpdateStateForCommit(blink::WebHistoryItem const&, blink::WebHistoryCommitType) + 258
      8   QtWebEngineCore_debug               0x000000011ad9979f content::RenderFrameImpl::DidCommitNavigationInternal(blink::WebHistoryItem const&, blink::WebHistoryCommitType, bool, mojo::InterfaceRequest<service_manager::mojom::InterfaceProvider>) + 255
      9   QtWebEngineCore_debug               0x000000011ad9e474 content::RenderFrameImpl::DidFinishSameDocumentNavigation(blink::WebHistoryItem const&, blink::WebHistoryCommitType, bool) + 1124
      10  QtWebEngineCore_debug               0x000000011ad9e721 non-virtual thunk to content::RenderFrameImpl::DidFinishSameDocumentNavigation(blink::WebHistoryItem const&, blink::WebHistoryCommitType, bool) + 65
      11  QtWebEngineCore_debug               0x00000001196039a0 blink::LocalFrameClientImpl::DidFinishSameDocumentNavigation(blink::HistoryItem*, blink::WebHistoryCommitType, bool) + 130
      ...
      

      This lead me to ContentSettingsObserverQt::DidCommitProvisionalLoad which has the comment:

       // If we start failing this DCHECK, please makes sure we don't regress
       // this bug: http://code.google.com/p/chromium/issues/detail?id=79304
      

      I can try to make a small example if the problem is not obvious from the report.

        For Gerrit Dashboard: QTBUG-71762
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            asm Andy M
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes