FIXUP: Pass virtual url of data url request back to the UI

Pass the virtual URL as the requested URL during same-document
history navigation, and never set virtual URL if it mathes the
primary URL.

Fixes: QTBUG-71762
Change-Id: I411903bf7501e60048c88141346259f2a436f2a3
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>